@@ -33,12 +33,13 @@ module Moneta
       :sha512   => [ :digest,    nil,                              '::Digest::SHA512.hexdigest(%s)', 'digest/sha2'   ],
       :prefix   => [ :prefix,    nil,                              '(options[:prefix]||@prefix)+%s'                  ],
       :spread   => [ :spread,    nil,                              'Helper.spread(%s)'                               ],
+      :to_s     => [ :to_s,      nil,                              '%s.to_s'                                         ],
     }
 
     # Allowed value transformers (Read it like a regular expression!)
     VALUE_TRANSFORMER = 'serialize? compress? hmac? encode?'
 
     # Allowed key transformers (Read it like a regular expression!)
-    KEY_TRANSFORMER = 'serialize? prefix? ((encode? truncate?) | (digest spread?))?'
+    KEY_TRANSFORMER = '(serialize | to_s)? prefix? ((encode? truncate?) | (digest spread?))?'
   end
 end
