@@ -799,6 +799,19 @@ it 'compile transformer class' do
   Moneta::Transformer::MarshalKey.should_not be_nil
 end}
   },
+  'transformer_key_to_s' => {
+    :build => %{Moneta.build do
+  use :Transformer, :key => :to_s
+  adapter :Memory
+end},
+    :specs => TRANSFORMER_SPECS.returnsame.simplekeys_only,
+    :load_value => 'value',
+    :tests => %{
+it 'compile transformer class' do
+  store.should_not be_nil
+  Moneta::Transformer::To_sKey.should_not be_nil
+end}
+  },
   'transformer_value_marshal' => {
     :build => %{Moneta.build do
   use :Transformer, :value => :marshal
